[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/ClickableButton.gd" type="Script" id=1]

[node name="ClickableButton" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_ClickableButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_ClickableButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickableButton_mouse_exited"]
